# gpug-graphql

./: .editorconfig  Makefile  Pipfile  README.md  db.sqlite3  dump.rdb  graphene-demo.ipynb  graphene_1.py  graphene_2.py  graphene_3.py  pyproject.toml  queries.gql
config/: settings.py  urls.py
meetup/: admin.py  models.py  schema.py  serializers.py  tasks.py  urls.py  views.py
meetup/migrations/: 0001_initial.py  0002_auto_20180613_1606.py  0003_auto_20180613_1810.py  0004_meetup_syncing.py
meetup/static/js/: App.js  app.js
meetup/templates/meetup/: tasks.html
meetup/views/: __init__.py  api.py  template.py
